k8s-specifications/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: sampledevopstodoappacr.azurecr.io/backend-service
        name: backend
        ports:
        - containerPort: 3500
          name: result
      imagePullSecrets:
      - name: acr-secret
