k8s-specifications/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  type: ClusterIP
  ports:
  - name: "backend-service"
    port: 3500
    protocol: TCP
  selector:
    app: backend
