k8s-specifications/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  type: ClusterIP
  ports:
  - name: "frontend-service"
    port: 3000
    protocol: TCP
  selector:
    app: frontend
